Fix: tweak draggable handle to handle more cases
This is based on my research at
https://www.redblobgames.com/x/2251-draggable/

1. When text is selected, dragging will drag the text instead of my
   handle. Use @dragstart.prevent to stop that.
2. Right clicking to bring up the menu interferes with dragging
   the handle. Middle clicking to autoscroll also interferes with
   dragging the handle. Users generally expect only the left button
   should drag the handle, so use @pointerdown.left instead of
   @pointerdown. I still use @pointerup instead of @pointerup.left
   because of chording: left down, right down, left up, right up will
   produce pointerdown.left then pointerup.right, and I want the drag
   to stop either way. There's a better fix but this is the simplest.
3. There's no need to trigger pointermove after a pointerdown, so I
   removed that unnecessary line of code.

--- a/index.org
+++ b/index.org
@@ -254,8 +254,10 @@ To implement this, I need a ~dragging~ flag and a pair of event handlers to upda
   <p>
   Pointer events unify touch and mouse, but touch devices <em>also</em>
   let you scroll the page. I want to prevent <code>touchstart</code> on
-  the drag handle from scrolling the page. Then <code>pointerdown</code>+<code>pointerup</code>
-  let me track whether the mouse/finger is held down. The <code>pointercancel</code>
+  the drag handle from scrolling the page. Mouse devices <em>also</em> let you drag text, when text is selected. I want to prevent <code>dragstart</code>
+  to prevent dragging text. Then <code>pointerdown</code>+<code>pointerup</code>
+  let me track whether the mouse/finger is held down. I want to start drag only on
+  the left mouse button so I use <code>pointerdown.left</code>. The <code>pointercancel</code>
   handler gets called <a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/pointercancel_event">for various reasons</a> and I use that to reset the dragging status.
   </p>
 </details>
